package com.unfamilia.eggbot.application.raidpackage.domain;

public enum ItemCategory {
}
