@startuml
entity "User" as user {
    *user_id : number <<generated>>
    --
    *character_name : text
    *discord_id : number
}

entity "Order" as order {
    *order_id : number <<generated>>
    --
    *user_id : number <<FK>>
    *order_time : datetime
    *fulfilled : boolean
    *paid : boolean
    *message_id : number
}

entity "OrderEntry" as order_entry{
    *order_entry_id : number <<generated>>
    --
    *order_id : number <<FK>>
    *item_id : number <<FK>>
    *qty : number
}

entity "Item" as item {
    *item_id : number <<generated>>
    --
    *item_name : text
    *item_category : number <<FK>>
    *item_price : number
}

entity "ItemCategory" as item_category {
    *category_id : number <<generated>>
    --
    *category_name : text
}


user ||..o{ order
order ||..o{ order_entry
order_entry }o..o{ item
item }o..|| item_category

@enduml